--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
         "bcryptjs": "^2.4.3",
         "daisyui": "^4.12.2",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^7.6.13",
+        "mongoose": "^8.4.1",
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.13",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
